--- a/finances/templates/finances/base.html
+++ b/finances/templates/finances/base.html
@@ -191,6 +191,8 @@
             box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.1);
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    {% block extra_js %}{% endblock %}
 </head>
 <body>
     <nav>
